--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^1.35.3"
+    "@shopify/shopify-api": "^3.1.3",
+    "axios": "^0.27.2",
+    "firebase": "^9.8.2"
   }
 }
